[package]
name = "mabez_watch"
version = "0.0.1"
authors = ["Scott Mabin <mabezdev@gmail.com>"]
description = "A 'Smart' watch"
keywords = ["arm", "cortex-m", "smartwatch"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mabezdev/mabez_watch_rust"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.1"
cortex-m-rtfm = { git = "https://github.com/mabezdev/cortex-m-rtfm" }
# cortex-m-rtfm = { path = "../../util/cortex-m-rtfm" }
panic-semihosting = "0.5.0"
embedded-graphics = "0.4.4"
# stm32l4xx-hal = { version = "0.3.0", features = ["rt", "stm32l4x2"] }
stm32l4xx-hal = { path = "../../hal/stm32l432xx-hal", features = ["rt", "stm32l4x2"] }

[dependencies.ssd1351]
# path = "../../drivers/ssd1351"
version = "0.1.5"
features = ["embedded-graphics"]

[dependencies.heapless]
version = "0.4.0"
features = ["const-fn"]

# [dependencies.stm32l432xx-hal]
# version = "0.2.6"
# path = "../../hal/stm32l432xx-hal"

# ready for rust 2018
[[bin]]
name = "mabez_watch"
test = false
bench = false

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
lto = true
debug = true
