[package]
name = "mabez_watch"
version = "0.0.1"
authors = ["Scott Mabin <mabezdev@gmail.com>"]
description = "A 'Smart' watch"
keywords = ["arm", "cortex-m", "smartwatch"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mabezdev/mabez_watch_rust"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-rtfm = { version = "0.4.0" } # , features = ["timer-queue"]
panic-itm = "0.4.0"
panic-semihosting = "0.5.1"
embedded-graphics = "0.4.4"
max17048 = "0.1.0"
hm11 = "0.2.1"
simple-hex = "0.1.0"

[dependencies.ssd1351]
# git = "https://github.com/mabezdev/ssd1351"
# path = "../../drivers/ssd1351"
version = "0.1.6"
features = ["embedded-graphics"]

[dependencies.heapless]
version = "0.4.1"
# features = ["const-fn"]

[dependencies.stm32l4xx-hal]
version = "0.3.4"
# path = "../../hal/stm32l432xx-hal"
# git = "https://github.com/mabezdev/stm32l4xx-hal"
features = ["rt", "stm32l4x2"]


[features]
cpu-itm = []

[[bin]]
name = "mabez_watch"
test = false
bench = false

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
lto = true
debug = true
