[package]
name = "mwatch_kernel"
version = "0.9.0"
authors = ["Scott Mabin <mabezdev@gmail.com>"]
description = "A embedded 'Smart' watch"
keywords = ["arm", "cortex-m", "smartwatch"]
categories = ["embedded", "no-std"]
repository = "https://github.com/mwatch/kernel"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"tools/",
	"tools/*",
	"itm.fifo",
]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-rtfm = { version = "0.4.2", features = ["nightly"] }
panic-itm = "0.4.0"
panic-semihosting = "0.5.1"
embedded-graphics = "0.4.7"
max17048 = "0.1.0"
hm11 = "0.2.1"
simple-hex = "0.1.0"
cortex-m-log = {  version = "0.4.0", features = ["itm", "log-integration"] }
log = "0.4.6"
crc = { version = "1.8.1", default-features = false }
heapless = "0.4.2"
panic-ramdump = "0.1.0"

[dependencies.ssd1351]
version = "0.2.2"
# git = "https://github.com/mabezdev/ssd1351"
# rev = "716af2c8de8b24c22d489df7a10ecbd62349fee5"
# path = "../../drivers/ssd1351"
features = ["embedded-graphics", "buffered"]

[dependencies.stm32l4xx-hal]
version = "0.3.6"
# path = "../../hal/stm32l432xx-hal"
git = "https://github.com/mabezdev/stm32l4xx-hal"
features = ["rt", "stm32l4x2"]

[features]
default = ["crc-fb"]
itm = []
semihosting = []
disable-input = []
crc-fb = []
dyn-tsc-cal = []

[lib]
name = "mwatch_kernel_lib"
path = "src/lib.rs"

[[bin]]
name = "mwatch_kernel"
test = false
bench = false

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 'z' # 0 or 1 for debug

[profile.release]
codegen-units = 1
lto = true
debug = true
