[package]
name = "kernel-esp32s3"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = { version = "0.4.0", features = ["async", "embassy", "embassy-time-systick"] }
esp-backtrace = { version = "0.4.0", features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32s3", "log"] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32s3"], optional = true }
mwatch-kernel = { version = "2.0", package = "mwatch_kernel", path = "../kernel" }
embassy-executor = { version = "0.1.1", features = ["nightly", "integrated-timers"] }
embassy-time = "0.1.0"
static-cell = { version = "1", package = "static_cell" }
log = "0.4"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
