[package]
name = "mwatch-kernel-stm32l4"
version = "1.0.0"
authors = ["Scott Mabin <mabezdev@gmail.com>"]
description = "A embedded 'Smart' watch"
keywords = ["arm", "cortex-m", "smartwatch"]
categories = ["embedded", "no-std"]
repository = "https://github.com/mwatch/kernel"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"tools/",
	"tools/*",
	"itm.fifo",
]
edition = "2021"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.8"
cortex-m-rtic = { version = "0.5.6" }
panic-itm = { version = "0.4.0", optional = true }
panic-semihosting = { version = "0.5.1", optional = true }
rtt-target = { version = "0.3.1", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"], optional = true }
embedded-graphics = "0.4.7"
max17048 = "0.1.0"
hm11 = "0.2.1"
simple-hex = "0.1.0"
cortex-m-log = {  version = "0.4.0", features = ["itm", "log-integration"] }
log = "0.4.6"
crc = { version = "1.8.1", default-features = false }
heapless = "0.4.2"
embedded-hal = "0.2.3"
mwatch-kernel = { path = "../kernel" }

[dependencies.ssd1351]
version = "0.3.0"
git = "https://github.com/mabezdev/ssd1351"
rev = "6240d8cc614a0d10cfb067faf1b87968369c4b56"
# path = "../../drivers/ssd1351"
features = ["embedded-graphics", "buffered"]

[dependencies.stm32l4xx-hal]
version = "0.5.0"
# path = "../../hal/stm32l432xx-hal"
# git = "https://github.com/mabezdev/stm32l4xx-hal"
features = ["rt", "stm32l4x2"]

[features]
default = ["crc-fb", "rtt"]
rtt = ["dep:rtt-target", "dep:panic-rtt-target"]
itm = ["dep:panic-itm"]
semihosting = ["dep:panic-semihosting"]
disable-input = []
crc-fb = []
dyn-tsc-cal = []
