[package]
name = "mwatch_kernel"
version = "2.0.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
description = "A embedded 'Smart' watch"
keywords = ["smartwatch", "embedded", "no-std"]
categories = ["embedded", "no-std"]
repository = "https://github.com/mwatch/kernel"
readme = "../README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
	"tools/",
	"tools/*",
	"itm.fifo",
]
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
simple-hex = "0.1.0"
log = "0.4.6"
crc = { version = "1.8.1", default-features = false }
heapless = "0.7.16"
embedded-hal = "0.2.3"

[dependencies.time]
version = "0.3"
default-features = false
